--- a/starlight-princess-1000-kastil-istana.html
+++ b/starlight-princess-1000-kastil-istana.html
@@ -23,7 +23,7 @@
         <meta name="distribution" content="global" />
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="mobile-web-app-capable" content="yes" />
-        <link rel="preload" as="image" href="https://link-jp86.github.io/news/starlight-princess-1000.jpg">
+        <link rel="preload" as="image" href="https://link-jackpot86.github.io/news/jackpot86-logo.png">
         <link rel="preload" as="image" href="https://link-jp86.github.io/news/starlight-princess-1000.jpg">
         <!-- OG:FACEBOOK -->
         <meta property="og:locale" content="id_ID" />
