--- a/starlight-princess-1000-kastil-istana.html
+++ b/starlight-princess-1000-kastil-istana.html
@@ -160,7 +160,7 @@
     <div class="header-wrapper">
         <div class="logo">
             <a href="https://link-jp86.github.io/news/starlight-princess-1000-kastil-istana.html">
-                <amp-img src="https://link-jp86.github.io/news/starlight-princess-1000.jpg" width="350" height="85" alt="Jackpot86 Daily News" layout="fixed"></amp-img>
+                <amp-img src="https://link-jackpot86.github.io/news/jackpot86-logo.png" width="350" height="85" alt="Jackpot86 Daily News" layout="fixed"></amp-img>
             </a>
         </div>
     </div>
